[package]
name = "jupiter-cpi"
version = "6.0.0"
edition = "2021"
description = "Anchor CPI client for the Jupiter program."
authors = ["Siong Ong <siong@raccoons.dev>"]
repository = "https://github.com/jup-ag/jupiter-cpi"
license = "Apache-2.0"
keywords = ["solana", "anchor", "cpi", "jupiter"]

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.29.0"
anchor-gen = "0.3.1"
rand = "0.8.5"
jupiter-amm-interface = "0.4.5"